--- a/app/assets/styles/modules/_portfolio_section.css
+++ b/app/assets/styles/modules/_portfolio_section.css
@@ -793,6 +793,20 @@
     .portfolio-section-item > div{
         padding: 30px;
     }
+     .portfolio-section-item {
+    &.fave> div,
+    &.attendance > div,
+    &.cms > div,
+    &.edu  > div ,
+    &.pave > div,
+    &.mind > div ,
+    &.travel > div,
+    &.directory  > div ,
+    &.marketplace > div{
+        padding:30px;
+        
+    }
+    }  
 }
 @media only screen and (max-width:768px){
     
@@ -877,7 +891,25 @@
     }
     .portfolio-section-item > div {
         padding: 23px 0px;
+    } 
+    .portfolio-section-item {
+    &.fave> div,
+    &.attendance > div,
+    &.cms > div,
+    &.edu  > div ,
+    &.pave > div,
+    &.mind > div ,
+    &.travel > div,
+    &.directory  > div ,
+    &.marketplace > div{
+        padding:23px 0px;
+        
     }
+    } 
+.portfolio-section__image-container--resp{
+    transform: translateX(-27px);
+}
+
 }
 @media only screen and (max-width: 512px){
     .portfolio-section-modal-container > div p.tworeport {
@@ -894,7 +926,10 @@
         right: 16%;
         bottom: 15%;
     }
-    
+.portfolio-section-item.travel h2{
+    line-height: 34px;
+}
+
 }
 @media only screen and (max-width: 425px){
     .portfolio-section-item,
@@ -947,6 +982,9 @@
     .portfolio-section__text {
         font-size: 1.0rem;
     }
+    .portfolio-section__image-container--resp{
+        transform: translateX(-9px);
+    }
 }
 @media only screen and (max-width: 368px){
     .portfolio-section-modal-container > div p {
@@ -964,6 +1002,9 @@
        
         right: 22%;
     }
+.portfolio-section-extended a{
+    font-size: 11px;
+}
 }
 @media only screen and (max-width: 368px){
     
