--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -262,7 +262,7 @@
         }
         &--flex-img {
             width: 783px;
-            height: 640px;
+            /* height: 640px; */
 
             > img.queens {
                 width: 100%; 
@@ -451,9 +451,9 @@ color: #FFFFFF;
     }
 }
 @media only screen and (max-width:1110px){
-    .portfolio__item--flex-img {
-        height: 666px;
-    }
+    /* .portfolio__item--flex-img {
+        height: 666px; 
+   }*/
     .portfolio__swiper--area {
         width:calc(100% - 666px)
     }
@@ -499,7 +499,7 @@ color: #FFFFFF;
     
     {
         width: 100%;
-        height: auto;
+        /* height: auto; */
     }
     .no-break{
         display: none;
@@ -512,7 +512,7 @@ color: #FFFFFF;
     }
     
     .portfolio__swiper--area {
-        width: 40%;
+        width: 100%;
     }
     .portfolio__title.saint, .portfolio__title.queens {
         /* font-size: 36px; */
@@ -531,16 +531,19 @@ color: #FFFFFF;
     .portfolio__item--flex-text {
         padding:0px 0px 10px 70px;
     }
-    .portfolio__swiper--area {
+    /* .portfolio__swiper--area {
         width: 50%;
-    }
+    } */
     
 }
 @media only screen and (max-width:512px){
     
     .portfolio__item--flex-text {
         padding:0px 0px 10px 30px;
-        min-height: 521px;
+        /* min-height: 521px; */
+        
+    }
+    .portfolio__item--flex-text.custom{
         height: 521px;
     }
     .swiper-2 > .swiper-wrapper > .swiper-slide > div > .portfolio__item--flex-text {
@@ -550,7 +553,7 @@ color: #FFFFFF;
         height: auto;
     }
     .portfolio__swiper--area {
-        width: 60%;
+        /* width: 60%; */
         padding: 14px;
     }
     .portfolio__title {
@@ -568,6 +571,9 @@ color: #FFFFFF;
     .portfolio__title.saint, 
     .portfolio__title.queens {
         font-size: 25px;
+    }
+    .portfolio__item--flex-img> img {
+        height: 350px;
     }
 }
     
