--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -501,6 +501,9 @@ color: #FFFFFF;
         width: 100%;
         /* height: auto; */
     }
+    .btn-femi.btn--top-space {
+        margin-top: 6px;
+    }
     .no-break{
         display: none;
     }
@@ -534,7 +537,13 @@ color: #FFFFFF;
     /* .portfolio__swiper--area {
         width: 50%;
     } */
-    
+    .portfolio__item--flex-text.custom{
+        height: 475px;
+    }
+    .btn-femi.btn--top-space {
+        margin-top: 17px;
+    }
+
 }
 @media only screen and (max-width:512px){
     
