latest menu update

--- a/app/assets/styles/modules/_portfolio_section.css
+++ b/app/assets/styles/modules/_portfolio_section.css
@@ -424,6 +424,9 @@
         &--afiaanyi{
             color: #fff;
         }
+        &.cms {
+            line-height: 47px;
+        }
         &--mom{
             color: white;
             line-height: 50px;
